--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ a {
 
 .container {
   width: 1170px;
-  max-width: calc(1170px - 48px);
+  max-width: calc(100% - 48px);
   margin: 0 auto;
 }
 
@@ -117,7 +117,7 @@ a {
   display: flex;
 }
 
-.action__login,
+.header-action__login,
 .nav__link {
   padding: 4px 21px;
   color: #c9d2da;
@@ -144,11 +144,87 @@ a {
   border-radius: 50%;
 }
 
-.action__signup {
+.header-action {
+  display: flex;
+  align-items: center;
+}
+
+.header-action__login {
+  margin-right: 7px;
+}
+
+.header-action__signup {
   --height: 44px;
 
   min-width: 104px;
   height: var(--height);
   line-height: var(--height);
   font-size: 1.6rem;
+}
+
+/* Hero */
+.hero {
+  display: flex;
+  margin-top: 76px;
+  align-items: center;
+}
+
+.hero__content {
+  flex-shrink: 0;
+  width: 44%;
+}
+
+.hero__heading {
+  color: #fff;
+  font-size: 7rem;
+  font-weight: 600;
+  line-height: 1.14;
+  letter-spacing: -1.4px;
+}
+
+.hero__desc {
+  margin-top: 22px;
+  color: #c9d2da;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.67;
+}
+
+.hero__row {
+  display: flex;
+  align-items: center;
+  margin-top: 38px;
+}
+
+.hero__phone {
+  color: #fff;
+  font-size: 1.8rem;
+  margin-left: 38px;
+}
+
+.hero__media {
+  flex-grow: 1;
+}
+
+.hero__images {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.hero__img {
+  object-fit: cover;
+  width: 330px;
+  height: 540px;
+  border-radius: 6px;
+}
+
+.hero__img:first-child {
+  position: relative;
+  margin-right: -6px;
+}
+
+.hero__img:last-child {
+  width: 210px;
+  height: 410px;
 }
