--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -379,3 +379,42 @@ a {
   font-weight: 400;
   line-height: 1.75;
 }
+
+/* Feature */
+.feature {
+  padding: 85px 0;
+  margin-top: 85px;
+}
+
+.feature__inner {
+  display: flex;
+  align-items: center;
+  column-gap: 130px;
+}
+
+.feature__media {
+  width: 48%;
+}
+
+.feature__images {
+  position: relative;
+  padding: 0 58px 121px 0;
+}
+
+.feature__img {
+  object-fit: cover;
+  width: 512px;
+  height: 370px;
+  border-radius: 6px;
+}
+
+.feature__img:last-child {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 332px;
+}
+
+.feature__cta {
+  margin-top: 38px;
+}
