--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -418,3 +418,95 @@ a {
 .feature__cta {
   margin-top: 38px;
 }
+
+/* Member */
+.member {
+  padding: 85px 0;
+  text-align: center;
+}
+
+.member__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.member__heading {
+  margin-bottom: 38px;
+}
+
+.member__list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  margin-top: 70px;
+}
+
+.member-item__img-bg {
+  border-radius: 6px;
+  background: #eaf6ff;
+  padding-top: 28px;
+  overflow: hidden;
+}
+
+.member-item__thumb {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+  height: 290px;
+  transition: 0.25s;
+}
+
+.member-item:hover .member-item__thumb {
+  transform: scale(1.1);
+}
+
+.member-item__name {
+  margin-top: 12px;
+  color: #10375c;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+
+.member-item__title {
+  color: #575f66;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.86;
+}
+
+.member__control {
+  margin-top: 38px;
+}
+
+.control {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+}
+
+.control__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 1px solid #575f66;
+  outline: none;
+  color: #575f66;
+  background: #fff;
+  transition: 0.25s;
+}
+
+.control__btn:hover {
+  color: #fff;
+  cursor: pointer;
+  border-color: #2e80ce;
+  background: #2e80ce;
+}
+
+.control-next-icon {
+  rotate: 180deg;
+}
