--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -510,3 +510,44 @@ a {
 .control-next-icon {
   rotate: 180deg;
 }
+
+/* Install */
+.install {
+  margin-top: 180px;
+}
+
+.install__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 70px;
+  border-radius: 4px;
+  background: #2e80ce;
+}
+
+.install__img {
+  display: block;
+  object-fit: cover;
+  width: 284px;
+  height: 522px;
+  margin-top: -95px;
+}
+
+.install__content {
+  max-width: 586px;
+}
+
+.install__heading {
+  max-width: 489px;
+}
+
+.install__heading,
+.install__desc {
+  color: #fff;
+}
+
+.install__row {
+  display: flex;
+  margin-top: 38px;
+  gap: 28px;
+}
