--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -478,11 +478,11 @@ a {
 
 .member__control {
   margin-top: 38px;
+  justify-content: center;
 }
 
 .control {
   display: flex;
-  justify-content: center;
   gap: 18px;
 }
 
@@ -550,4 +550,107 @@ a {
   display: flex;
   margin-top: 38px;
   gap: 28px;
+}
+
+/* News */
+.news {
+  margin-top: 85px;
+  padding: 85px 0;
+}
+
+.news__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news__content {
+  flex-shrink: 0;
+}
+
+.news__heading {
+  max-width: 470px;
+}
+
+.news__more {
+  display: inline-block;
+  margin-top: 28px;
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.55;
+  text-decoration-line: underline;
+  text-underline-offset: 5px;
+}
+
+.news__control {
+  margin-top: 28px;
+}
+
+.news__list {
+  display: flex;
+  gap: 30px;
+  max-width: 570px;
+}
+
+.news-item {
+  flex: 1;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.news-item__thumb {
+  height: 172px;
+  overflow: hidden;
+}
+
+.news-item:hover .news-item__img {
+  transform: scale(1.1);
+}
+
+.news-item__img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: 0.25s;
+}
+
+.news-item__body {
+  padding: 18px 24px 21px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+  border-top: none;
+  border-radius: 0 0 12px 12px;
+  transition: 0.25s;
+}
+
+.news-item:hover .news-item__body {
+  border-color: #fff;
+}
+
+.news-item__heading {
+  margin-top: 18px;
+  font-size: 1.6rem;
+  line-height: 1.62;
+}
+
+.news-item__desc {
+  margin-top: 10px;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.71;
+  max-width: 224px;
+}
+
+.news-item__more {
+  display: inline-block;
+  margin-top: 12px;
+  color: #10375c;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.news-item__more:hover {
+  color: #2e80ce;
 }
