--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -654,3 +654,40 @@ a {
 .news-item__more:hover {
   color: #2e80ce;
 }
+
+/* Appointment */
+.appointment {
+  margin: 85px 0 170px;
+}
+
+.appointment__inner {
+  padding: 100px 179px;
+  background: #f6fbff;
+  text-align: center;
+}
+
+.appointment__heading {
+  position: relative;
+  padding-bottom: 18px;
+}
+
+.appointment__heading::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  display: block;
+  content: '';
+  width: 136px;
+  height: 2px;
+  background: #2e80ce;
+}
+
+.appointment__desc {
+  max-width: 617px;
+  margin: 18px auto 38px;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
