--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,14 @@ body {
 }
 
 /* Common */
+input,
+textarea,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+}
+
 a {
   text-decoration: none;
 }
@@ -281,6 +289,7 @@ a {
   border-radius: 10px;
   background: #fff;
   transition: 0.25s;
+  cursor: pointer;
 }
 
 .service-item:hover {
@@ -573,6 +582,7 @@ a {
 }
 
 .news__more {
+  font-family: Inter;
   display: inline-block;
   margin-top: 28px;
   color: #10375c;
@@ -580,7 +590,7 @@ a {
   font-weight: 600;
   line-height: 1.55;
   text-decoration-line: underline;
-  text-underline-offset: 5px;
+  text-underline-offset: 4px;
 }
 
 .news__control {
@@ -690,4 +700,124 @@ a {
   font-size: 1.6rem;
   font-weight: 300;
   line-height: 1.75;
+}
+
+/* Footer */
+.footer {
+  padding-top: 100px;
+  background: #10375c;
+  font-family: 'Open Sans';
+}
+
+.footer__row {
+  display: grid;
+  grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+  column-gap: 78px;
+}
+
+.footer__heading {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75;
+  margin-bottom: 20px;
+}
+
+.footer__desc {
+  margin-top: 22px;
+  color: #a9b3bb;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75;
+}
+
+.footer__item {
+  margin-bottom: 10px;
+}
+
+.footer__list {
+  margin-bottom: 28px;
+}
+
+.footer__link {
+  color: #a9b3bb;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  white-space: nowrap;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+}
+
+.footer__social {
+  display: flex;
+  column-gap: 10px;
+  margin-bottom: 28px;
+}
+
+.footer__desc--sub {
+  font-size: 1.4rem;
+  max-width: 273px;
+}
+
+.footer__social-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fff;
+  color: #2e80ce;
+  transition: 0.25s;
+}
+
+.footer__social-btn:hover {
+  color: #fff;
+  background: #2e80ce;
+}
+
+.footer-form {
+  display: flex;
+  margin-top: 10px;
+  column-gap: 12px;
+}
+
+.footer-form__input {
+  width: 212px;
+  height: 46px;
+  padding: 0 10px;
+  border-radius: 4px;
+  border: 1px solid #406181;
+  background: transparent;
+  outline: none;
+  color: #fff;
+}
+
+.footer-form__input::placeholder {
+  color: #9ca8b1;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+
+.footer-form__submit {
+  --height: 46px;
+
+  font-size: 1.4rem;
+  min-width: 108px;
+  border-radius: 4px;
+  font-weight: 600;
+}
+
+.footer__copyright {
+  padding: 28px 0 42px;
+  border-top: 1px solid #406181;
+}
+
+.footer__copyright-text {
+  color: #aab3ba;
+  text-align: center;
+  font-size: 1.4rem;
+  line-height: 1.86;
 }
